# cyberdog_sim

./: .gitignore  AGENTS.md  SLAM_OPERATION_GUIDE.md  check_robot.py  cleanup.sh  debug_shm.py  diagnose_and_start.sh  final_start.sh  fix_all_v3.sh  fix_all_v4.sh  fix_lidar.sh  init.sh  init_fix.sh  init_once.sh  install_glog_and_build.sh  launch_all.sh  quick_start.sh  sim_lidar.py  start_all.sh  start_fixed.sh  start_race.sh  start_slam.sh  t1.sh  t2.sh  t3.sh  term1.sh  term2.sh  term3.sh  test_full_loco.py  test_gait.py  test_lcm.py  test_motion_full.py  test_official.py
.githooks/: post-commit
code_and_readme/: README.md
race_controller/: race_controller.py
snap/snap-store/1216/.config/dconf/: user
snap/snap-store/1216/.config/gtk-3.0/: bookmarks  gtk.css  settings.ini
snap/snap-store/638/.config/: user-dirs.dirs
snap/snap-store/638/.config/gtk-2.0/: gtkfilechooser.ini
snap/snap-store/638/.config/ibus/: bus
snap/snap-store/common/.cache/fontconfig/: c8010776-5799-415d-ba5d-b70bcf0d72fc-le64.cache-7
src/: setup_slam.sh
src/Super-LIO-ros2/src/basic/: CMakeLists.txt
src/Super-LIO-ros2/src/super_lio/: CMakeLists.txt  CMakeLists.txt.bak
src/Super-LIO-ros2/src/super_lio/config/: hesai.yaml
src/Super-LIO-ros2/src/super_lio/launch/: Livox_mid360.py
src/Super-LIO-ros2_bak/src/livox_ros_driver2/: CMakeLists.txt  package.xml
src/Super-LIO-ros2_bak/src/super_lio/cmake/: FindGlog.cmake
src/Super-LIO-ros2_bak/src/super_lio/config/: hesai.yaml  livox_360.yaml
src/Super-LIO-ros2_bak/src/super_lio/launch/: hesai.py
(+1 files in other folders)
